--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
                   <span class="course" >PHYSICS</span>
                   </button>
                                 <div class="dropdown-menu">
-                                    <a target="_blank" class="dropdown-item" href="phy6.html"><span class="sub">LIGHT-REFLECTION AND REFRACTION</span></a>
-                                    <a target="_blank" class="dropdown-item" href="phy7.html"><span class="sub">THE HUMAN EYE AND THE COLOURFUL WORLD</span></a>
-                                    <a target="_blank" class="dropdown-item" href="phy1.html"><span class="sub">MOTION</span></a>
-                                    <a target="_blank" class="dropdown-item" href="phy2.html"><span class="sub">FORCES AND LAWS OF MOTION</span></a>
-                                    <a target="_blank" class="dropdown-item" href="phy3.html"><span class="sub">GRAVITATION</span></a>
-                                    <a target="_blank" class="dropdown-item" href="phy4.html"><span class="sub">WORK AND ENERGY</span></a>
-                                    <a target="_blank" class="dropdown-item" href="phy5.html"><span class="sub">SOUND</span></a>
+                                    <a target="_blank" class="dropdown-item" href="phy6.html"><span class="sub">CLASS 10TH- LIGHT-REFLECTION AND REFRACTION</span></a>
+                                    <a target="_blank" class="dropdown-item" href="phy7.html"><span class="sub">CLASS 10TH- THE HUMAN EYE AND THE COLOURFUL WORLD</span></a>
+                                    <a target="_blank" class="dropdown-item" href="phy1.html"><span class="sub">CLASS 9TH- MOTION</span></a>
+                                    <a target="_blank" class="dropdown-item" href="phy2.html"><span class="sub">CLASS 9TH- FORCES AND LAWS OF MOTION</span></a>
+                                    <a target="_blank" class="dropdown-item" href="phy3.html"><span class="sub">CLASS 9TH- GRAVITATION</span></a>
+                                    <a target="_blank" class="dropdown-item" href="phy4.html"><span class="sub">CLASS 9TH- WORK AND ENERGY</span></a>
+                                    <a target="_blank" class="dropdown-item" href="phy5.html"><span class="sub">CLASS 9TH- SOUND</span></a>
 
                                 </div>
                             </div>
@@ -96,12 +96,12 @@
                 <span class="course" >CHEMISTRY</span>
                 </button>
                                 <div class="dropdown-menu">
-                                    <a target="_blank" class="dropdown-item" href="chem4.html"><span class="sub">CHEMICAL REACTIONS AND EQUATIONS</span></a>
-                                    <a target="_blank" class="dropdown-item" href="chem5.html"><span class="sub">ACIDS BASES AND SALTS</span></a>
-                                    <a target="_blank" class="dropdown-item" href="chem1.html"><span class="sub">MATTER IN OUR SORROUNDINGS</span></a>
-                                    <a target="_blank" class="dropdown-item" href="chem2.html"><span class="sub">IS MATTER AROUND US PURE</span></a>
-                                    <a target="_blank" class="dropdown-item" href="chem3.html"><span class="sub">ATOMS AND MOLECULES</span></a>
-                                    <a target="_blank" class="dropdown-item" href="chem4.html"><span class="sub">STRUCTURE OF THE ATOM</span></a>
+                                    <a target="_blank" class="dropdown-item" href="chem4.html"><span class="sub">CLASS 10TH- CHEMICAL REACTIONS AND EQUATIONS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="chem5.html"><span class="sub">CLASS 10TH- ACIDS BASES AND SALTS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="chem1.html"><span class="sub">CLASS 9TH- MATTER IN OUR SORROUNDINGS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="chem2.html"><span class="sub">CLASS 9TH- IS MATTER AROUND US PURE</span></a>
+                                    <a target="_blank" class="dropdown-item" href="chem3.html"><span class="sub">CLASS 9TH- ATOMS AND MOLECULES</span></a>
+                                    <a target="_blank" class="dropdown-item" href="chem4.html"><span class="sub">CLASS 9TH- STRUCTURE OF THE ATOM</span></a>
 
                                 </div>
                             </div>
@@ -118,14 +118,14 @@
               <span class="course" >BIOLOGY</span>
               </button>
                                 <div class="dropdown-menu">
-                                    <a target="_blank" class="dropdown-item" href="bio7.html"><span class="sub">LIDE PROCESSES</span></a>
-                                    <a target="_blank" class="dropdown-item" href="bio8.html"><span class="sub">CONTROL AND COORDINATION</span></a>
-                                    <a target="_blank" class="dropdown-item" href="bio1.html"><span class="sub">THE FUNDAMENTAL UNIT OF LIFE</span></a>
-                                    <a target="_blank" class="dropdown-item" href="bio2.html"><span class="sub">TISSUES</span></a>
-                                    <a target="_blank" class="dropdown-item" href="bio3.html"><span class="sub">DIVERSITY IN LIVING ORGANISMS</span></a>
-                                    <a target="_blank" class="dropdown-item" href="bio4.html"><span class="sub">WHY DO WE FALL ILL</span></a>
-                                    <a target="_blank" class="dropdown-item" href="bio5.html"><span class="sub">NATURAL RESOURCES</span></a>
-                                    <a target="_blank" class="dropdown-item" href="bio6.html"><span class="sub">IMPROVEMENT IN FOOD RESOURCES</span></a>
+                                    <a target="_blank" class="dropdown-item" href="bio7.html"><span class="sub">CLASS 10TH- LIFE PROCESSES</span></a>
+                                    <a target="_blank" class="dropdown-item" href="bio8.html"><span class="sub">CLASS 10TH- CONTROL AND COORDINATION</span></a>
+                                    <a target="_blank" class="dropdown-item" href="bio1.html"><span class="sub">CLASS 9TH- THE FUNDAMENTAL UNIT OF LIFE</span></a>
+                                    <a target="_blank" class="dropdown-item" href="bio2.html"><span class="sub">CLASS 9TH- TISSUES</span></a>
+                                    <a target="_blank" class="dropdown-item" href="bio3.html"><span class="sub">CLASS 9TH- DIVERSITY IN LIVING ORGANISMS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="bio4.html"><span class="sub">CLASS 9TH- WHY DO WE FALL ILL</span></a>
+                                    <a target="_blank" class="dropdown-item" href="bio5.html"><span class="sub">CLASS 9TH- NATURAL RESOURCES</span></a>
+                                    <a target="_blank" class="dropdown-item" href="bio6.html"><span class="sub">CLASS 9TH- IMPROVEMENT IN FOOD RESOURCES</span></a>
 
                                 </div>
                             </div>
@@ -141,23 +141,23 @@
             <span class="course" >MATHS</span>
             </button>
                                 <div class="dropdown-menu">
-                                    <a target="_blank" class="dropdown-item" href="math16.html"><span class="sub">REAL NUMBERS</span></a>
-                                    <a target="_blank" class="dropdown-item" href="math17.html"><span class="sub">POLYNOMIALS</span></a>
-                                    <a target="_blank" class="dropdown-item" href="math1.html"><span class="sub">NUMBER SYSYTEM</span></a>
-                                    <a target="_blank" class="dropdown-item" href="math2.html"><span class="sub">POLYNOMIALS</span></a>
-                                    <a target="_blank" class="dropdown-item" href="math3.html"><span class="sub">COORDINATE GEOMETRY</span></a>
-                                    <a target="_blank" class="dropdown-item" href="math4.html"><span class="sub">LINEAR EQUATIONS IN TWO VARIABLES</span></a>
-                                    <a target="_blank" class="dropdown-item" href="math5.html"><span class="sub">INTRODUCTION TO EUCLIDS GEOMETRY</span></a>
-                                    <a target="_blank" class="dropdown-item" href="math6.html"><span class="sub">LINES AND ANGLES</span></a>
-                                    <a target="_blank" class="dropdown-item" href="math7.html"><span class="sub">TRIANGLES</span></a>
-                                    <a target="_blank" class="dropdown-item" href="math8.html"><span class="sub">QUADRILATERALS</span></a>
-                                    <a target="_blank" class="dropdown-item" href="math9.html"><span class="sub">AREAS OF PARALLELOGRAMS AND TRIANGLES</span></a>
-                                    <a target="_blank" class="dropdown-item" href="math10.html"><span class="sub">CIRCLES</span></a>
-                                    <a target="_blank" class="dropdown-item" href="math11.html"><span class="sub">CONSTRUCTIONS</span></a>
-                                    <a target="_blank" class="dropdown-item" href="math12.html"><span class="sub">HERON'S FORMULA</span></a>
-                                    <a target="_blank" class="dropdown-item" href="math13.html"><span class="sub">SURFACE AREAS AND VOLUMES</span></a>
-                                    <a target="_blank" class="dropdown-item" href="math14.html"><span class="sub">STATISTICS</span></a>
-                                    <a target="_blank" class="dropdown-item" href="math15.html"><span class="sub">PROBABILITY</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math16.html"><span class="sub">CLASS 10TH- REAL NUMBERS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math17.html"><span class="sub">CLASS 10TH- POLYNOMIALS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math1.html"><span class="sub">CLASS 9TH- NUMBER SYSYTEM</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math2.html"><span class="sub">CLASS 9TH- POLYNOMIALS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math3.html"><span class="sub">CLASS 9TH- COORDINATE GEOMETRY</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math4.html"><span class="sub">CLASS 9TH- LINEAR EQUATIONS IN TWO VARIABLES</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math5.html"><span class="sub">CLASS 9TH- INTRODUCTION TO EUCLIDS GEOMETRY</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math6.html"><span class="sub">CLASS 9TH- LINES AND ANGLES</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math7.html"><span class="sub">CLASS 9TH- TRIANGLES</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math8.html"><span class="sub">CLASS 9TH- QUADRILATERALS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math9.html"><span class="sub">CLASS 9TH- AREAS OF PARALLELOGRAMS AND TRIANGLES</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math10.html"><span class="sub">CLASS 9TH- CIRCLES</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math11.html"><span class="sub">CLASS 9TH- CONSTRUCTIONS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math12.html"><span class="sub">CLASS 9TH- HERON'S FORMULA</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math13.html"><span class="sub">CLASS 9TH- SURFACE AREAS AND VOLUMES</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math14.html"><span class="sub">CLASS 9TH- STATISTICS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math15.html"><span class="sub">CLASS 9TH- PROBABILITY</span></a>
 
 
                                 </div>
