--- a/chem4.html
+++ b/chem4.html
@@ -51,10 +51,12 @@
             <span class="course" >CHEMISTRY</span>
             </button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="chem1.html"><span class="sub">MATTER IN OUR SORROUNDINGS</span></a>
-                        <a class="dropdown-item" href="chem2.html"><span class="sub">IS MATTER AROUND US PURE</span></a>
-                        <a class="dropdown-item" href="chem3.html"><span class="sub">ATOMS AND MOLECULES</span></a>
-                        <a class="dropdown-item" href="chem4.html"><span class="sub">STRUCTURE OF THE ATOM</span></a>
+                                    <a target="_blank" class="dropdown-item" href="chem4.html"><span class="sub">CLASS 10TH- CHEMICAL REACTIONS AND EQUATIONS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="chem5.html"><span class="sub">CLASS 10TH- ACIDS BASES AND SALTS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="chem1.html"><span class="sub">CLASS 9TH- MATTER IN OUR SORROUNDINGS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="chem2.html"><span class="sub">CLASS 9TH- IS MATTER AROUND US PURE</span></a>
+                                    <a target="_blank" class="dropdown-item" href="chem3.html"><span class="sub">CLASS 9TH- ATOMS AND MOLECULES</span></a>
+                                    <a target="_blank" class="dropdown-item" href="chem4.html"><span class="sub">CLASS 9TH- STRUCTURE OF THE ATOM</span></a>
 
                     </div>
                 </div>
