--- a/chem6.html
+++ b/chem6.html
@@ -1,1 +1,161 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Structure Of The Atom</title>
+    <!-- Bootstrap -->
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE<span>9/Qpg6aA</span>ZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    <script src="java/java.java"></script>
+
+    <!--CSS-->
+    <link rel="stylesheet" href="styles/chem.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Benne&family=Glegoo&family=Itim&family=Josefin+Slab:wght@600&family=Noto+Serif+KR:wght@200&display=swap" rel="stylesheet">
+
+
+
+</head>
+
+
+
+<body>
+
+
+    <nav class=" navbar  navbar-expand-lg navbar-light fixed-top ">
+
+        <a class="navbar-brand" href=""><span class="brand"><b>RSK IITK</span></b></a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+
+
+            <ul style="padding-right:100px ;" class="navbar-nav ml-auto">
+                <div class="btn-group">
+                    <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="course" >CHEMISTRY</span>
+            </button>
+                    <div class="dropdown-menu">
+                                    <a target="_blank" class="dropdown-item" href="chem4.html"><span class="sub">CLASS 10TH- CHEMICAL REACTIONS AND EQUATIONS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="chem5.html"><span class="sub">CLASS 10TH- ACIDS BASES AND SALTS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="chem1.html"><span class="sub">CLASS 9TH- MATTER IN OUR SORROUNDINGS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="chem2.html"><span class="sub">CLASS 9TH- IS MATTER AROUND US PURE</span></a>
+                                    <a target="_blank" class="dropdown-item" href="chem3.html"><span class="sub">CLASS 9TH- ATOMS AND MOLECULES</span></a>
+                                    <a target="_blank" class="dropdown-item" href="chem4.html"><span class="sub">CLASS 9TH- STRUCTURE OF THE ATOM</span></a>
+
+                    </div>
+                </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html"><span class="menu">HOME</span></a>
+                </li>
+                
+            </ul>
+        </div>
+    </nav>
+
+
+
+    <div style="margin-top: 60px;" class="mid">
+        <h1 class="about" style="color: white;font-family: 'Josefin Slab', serif; padding-bottom: 20px;">STRUCTURE OF THE ATOM</h1>
+
+        <div class="mid4">
+            <div style="background-color: rgb(18,18,18);" class="row">
+
+                <div class="col-lg-3 col-md-3 col-sm-12">
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1Wdtqu9h9A0zDTWE-LjnHA5B9ZpFzhrIs?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">BLACKBOARD NOTES</button></a>
+                </div>
+
+                <div class="col-lg-3 col-md-3 col-sm-12">
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1dElEecVFMLgj2BctKjTy4a4oS4oz7r8b?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
+                </div>
+
+                <div class="col-lg-3 col-md-3 col-sm-12">
+                    <a target="_blank" href="https://drive.google.com/drive/folders/11aSZuhaCt_Y33dqBgF7IFCeZwHFN7VR2?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">OTHER RESOURCES</button></a>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-12">
+                    <a target="_blank" href="https://drive.google.com/drive/folders/11KxmDYQnTViI5mPT_RyfW3hjdgx6oK5g?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">WORKSHEETS</button></a>
+                </div>
+
+
+
+
+
+
+
+            </div>
+
+
+
+            <div style="background-color: rgb(18,18,18);" class="row">
+
+
+                <div class="col-lg-3 col-md-3 col-sm-12">
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1-ky5Fl2qllDZ4iknApkyMeY8RJkljxom?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">TEST & EXAM-PAPERS</button></a>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-12">
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1s5Dq8jMP9SH03JO5C4hUcPmO6kXUoDyv?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">EXPERIMENTS,ACTIVITIES</button></a>
+                </div>
+
+                <div class="col-lg-3 col-md-3 col-sm-12">
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1zd6HjSmkP96y8ns1OXtgJvBsbQbgNTF6?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">OFFLINE RECORDINGS</button></a>
+                </div>
+
+
+
+
+                <div class="col-lg-3 col-md-3 col-sm-12">
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1qyr8kw7YCu2H_FXZT1fGBkAtHB6kPh0I?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">WORKSHOPS</button></a>
+                </div>
+
+
+
+
+
+            </div>
+        </div>
+
+
+    </div>
+
+
+
+    
+
+
+
+
+    <div class="footer">
+        <a target="blank" href="https://www.facebook.com/rskiitk/"><img class="soc" src="images/2945059_facebook_fb_logo_social_icon.png"></a>
+        <a target="blank" href="https://twitter.com/rskiitk?lang=en"><img class="soc" src="images/twitter.png"> </a>
+        <a target="blank" href="https://www.instagram.com/accounts/login/?next=/rskiitk/"> <img class="soc" src="images/1164349_circle_instagram_logo_media_network_icon.png"></a>
+        <br>
+
+        <p><b>CONNECT WITH US</b> <br> <br></p>
+
+        <p class="copyright">© RANJIT SINGH ROZI SHIKSHA KENDRA IITK</p>
+
+
+
+
+
+    </div>
+
+
+</body>
+
+</html>
