--- a/phy1.html
+++ b/phy1.html
@@ -51,12 +51,13 @@
             <span class="course" >PHYSICS</span>
             </button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="phy1.html"><span class="sub">MOTION</span></a>
-                        <a class="dropdown-item" href="phy2.html"><span class="sub">FORCES AND LAWS OF MOTION</span></a>
-                        <a class="dropdown-item" href="phy3.html"><span class="sub">GRAVITATION</span></a>
-                        <a class="dropdown-item" href="phy4.html"><span class="sub">WORK AND ENERGY</span></a>
-                        <a class="dropdown-item" href="phy5.html"><span class="sub">SOUND</span></a>
-
+                                    <a target="_blank" class="dropdown-item" href="phy6.html"><span class="sub">CLASS 10TH- LIGHT-REFLECTION AND REFRACTION</span></a>
+                                    <a target="_blank" class="dropdown-item" href="phy7.html"><span class="sub">CLASS 10TH- THE HUMAN EYE AND THE COLOURFUL WORLD</span></a>
+                                    <a target="_blank" class="dropdown-item" href="phy1.html"><span class="sub">CLASS 9TH- MOTION</span></a>
+                                    <a target="_blank" class="dropdown-item" href="phy2.html"><span class="sub">CLASS 9TH- FORCES AND LAWS OF MOTION</span></a>
+                                    <a target="_blank" class="dropdown-item" href="phy3.html"><span class="sub">CLASS 9TH- GRAVITATION</span></a>
+                                    <a target="_blank" class="dropdown-item" href="phy4.html"><span class="sub">CLASS 9TH- WORK AND ENERGY</span></a>
+                                    <a target="_blank" class="dropdown-item" href="phy5.html"><span class="sub">CLASS 9TH- SOUND</span></a>
                     </div>
                 </div>
                 <li class="nav-item">
