--- a/phy6.html
+++ b/phy6.html
@@ -1,1 +1,162 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Light- Reflection And Refraction</title>
+    <!-- Bootstrap -->
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE<span>9/Qpg6aA</span>ZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    <script src="java/java.java"></script>
+
+    <!--CSS-->
+    <link rel="stylesheet" href="styles/phy.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Benne&family=Glegoo&family=Itim&family=Josefin+Slab:wght@600&family=Noto+Serif+KR:wght@200&display=swap" rel="stylesheet">
+
+
+
+</head>
+
+
+
+<body>
+
+
+    <nav class=" navbar  navbar-expand-lg navbar-light fixed-top ">
+
+        <a class="navbar-brand" href=""><span class="brand"><b>RSK IITK</span></b></a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+
+
+            <ul style="padding-right:100px ;" class="navbar-nav ml-auto">
+                <div class="btn-group">
+                    <button class="btn btn-danger btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="course" >PHYSICS</span>
+            </button>
+                    <div class="dropdown-menu">
+                                    <a target="_blank" class="dropdown-item" href="phy6.html"><span class="sub">CLASS 10TH- LIGHT-REFLECTION AND REFRACTION</span></a>
+                                    <a target="_blank" class="dropdown-item" href="phy7.html"><span class="sub">CLASS 10TH- THE HUMAN EYE AND THE COLOURFUL WORLD</span></a>
+                                    <a target="_blank" class="dropdown-item" href="phy1.html"><span class="sub">CLASS 9TH- MOTION</span></a>
+                                    <a target="_blank" class="dropdown-item" href="phy2.html"><span class="sub">CLASS 9TH- FORCES AND LAWS OF MOTION</span></a>
+                                    <a target="_blank" class="dropdown-item" href="phy3.html"><span class="sub">CLASS 9TH- GRAVITATION</span></a>
+                                    <a target="_blank" class="dropdown-item" href="phy4.html"><span class="sub">CLASS 9TH- WORK AND ENERGY</span></a>
+                                    <a target="_blank" class="dropdown-item" href="phy5.html"><span class="sub">CLASS 9TH- SOUND</span></a>
+
+                    </div>
+                </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html"><span class="menu">HOME</span></a>
+                </li>
+              
+            </ul>
+        </div>
+    </nav>
+
+
+
+    <div style="margin-top: 60px;" class="mid">
+        <h1 class="about" style="color: white;font-family: 'Josefin Slab', serif; padding-bottom: 20px;">LIGHT- REFLECTION AND REFRACTION</h1>
+
+        <div class="mid4">
+            <div style="background-color: rgb(18,18,18);" class="row">
+
+                <div class="col-lg-3 col-md-3 col-sm-12">
+                    <a target="blank" href="https://drive.google.com/drive/folders/15I46xLvmOKgmvk5AnWL_s10RfAQIe142?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">BLACKBOARD NOTES</button></a>
+                </div>
+
+                <div class="col-lg-3 col-md-3 col-sm-12">
+                    <a target="blank" href="https://drive.google.com/drive/folders/1uSTXwS7vEa2x0FcdKLg8mpun_6vBjDgx?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
+                </div>
+
+                <div class="col-lg-3 col-md-3 col-sm-12">
+                    <a target="blank" href="https://drive.google.com/drive/folders/1w3-1glBePGZoR2odQkFNcC5pw6dDfoMY?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">OTHER RESOURCES</button></a>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-12">
+                    <a target="blank" href="https://drive.google.com/drive/folders/1Hq_yXLHg0pdZUZ8OWdZDnQ0Mw3-KnadF?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">WORKSHEETS</button></a>
+                </div>
+
+
+
+
+
+
+
+            </div>
+
+
+
+            <div style="background-color: rgb(18,18,18);" class="row">
+
+
+
+
+                <div class="col-lg-3 col-md-3 col-sm-12">
+                    <a target="blank" href="https://drive.google.com/drive/folders/1czlfXOxdm_SJa6gMLsamHWGXMPusK1tr?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">TEST & EXAM-PAPERS</button></a>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-12">
+                    <a target="blank" href="https://drive.google.com/drive/folders/1WtksU3nlc509Lk5oLVja5q7zeJmSZltQ?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">EXPERIMENTS,ACTIVITIES</button></a>
+                </div>
+
+                <div class="col-lg-3 col-md-3 col-sm-12">
+                    <a target="blank" href="https://drive.google.com/drive/folders/1PPoIT6in9eZeRtq8j98QPVEWhM92-8Ad?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">OFFLINE RECORDINGS</button></a>
+                </div>
+
+                <div class="col-lg-3 col-md-3 col-sm-12">
+                    <a target="blank" href="https://drive.google.com/drive/folders/1zzek90WxyXn1zOYUVAcnDQ5Glm9pz-KW?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">WORKSHOPS</button></a>
+                </div>
+
+
+
+
+
+            </div>
+        </div>
+
+
+    </div>
+
+
+
+    
+
+
+
+
+
+    <div class="footer">
+        <a target="blank" href="https://www.facebook.com/rskiitk/"><img class="soc" src="images/2945059_facebook_fb_logo_social_icon.png"></a>
+        <a target="blank" href="https://twitter.com/rskiitk?lang=en"><img class="soc" src="images/twitter.png"> </a>
+        <a target="blank" href="https://www.instagram.com/accounts/login/?next=/rskiitk/"> <img class="soc" src="images/1164349_circle_instagram_logo_media_network_icon.png"></a>
+        <br>
+
+        <p><b>CONNECT WITH US</b> <br> <br></p>
+
+        <p class="copyright">© RANJIT SINGH ROZI SHIKSHA KENDRA IITK</p>
+
+
+
+
+
+    </div>
+
+
+</body>
+
+</html>
