--- a/chem5.html
+++ b/chem5.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Structure Of The Atom</title>
+    <title>Chemical Reactions And Equations</title>
     <!-- Bootstrap -->
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -71,7 +71,7 @@
 
 
     <div style="margin-top: 60px;" class="mid">
-        <h1 class="about" style="color: white;font-family: 'Josefin Slab', serif; padding-bottom: 20px;">STRUCTURE OF THE ATOM</h1>
+        <h1 class="about" style="color: white;font-family: 'Josefin Slab', serif; padding-bottom: 20px;">Chemical Reactions And Equations</h1>
 
         <div class="mid4">
             <div style="background-color: rgb(18,18,18);" class="row">
