--- a/math16.html
+++ b/math16.html
@@ -51,21 +51,23 @@
                     <span class="course" >MATHS</span>
                     </button>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="math1.html"><span class="sub">NUMBER SYSYTEM</span></a>
-                                <a class="dropdown-item" href="math2.html"><span class="sub">POLYNOMIALS</span></a>
-                                <a class="dropdown-item" href="math3.html"><span class="sub">COORDINATE GEOMETRY</span></a>
-                                <a class="dropdown-item" href="math4.html"><span class="sub">LINEAR EQUATIONS IN TWO VARIABLES</span></a>
-                                <a class="dropdown-item" href="math5.html"><span class="sub">INTRODUCTION TO EUCLIDS GEOMETRY</span></a>
-                                <a class="dropdown-item" href="math6.html"><span class="sub">LINES AND ANGLES</span></a>
-                                <a class="dropdown-item" href="math7.html"><span class="sub">TRIANGLES</span></a>
-                                <a class="dropdown-item" href="math8.html"><span class="sub">QUADRILATERALS</span></a>
-                                <a class="dropdown-item" href="math9.html"><span class="sub">AREAS OF PARALLELOGRAMS AND TRIANGLES</span></a>
-                                <a class="dropdown-item" href="math10.html"><span class="sub">CIRCLES</span></a>
-                                <a class="dropdown-item" href="math11.html"><span class="sub">CONSTRUCTIONS</span></a>
-                                <a class="dropdown-item" href="math12.html"><span class="sub">HERON'S FORMULA</span></a>
-                                <a class="dropdown-item" href="math13.html"><span class="sub">SURFACE AREAS AND VOLUMES</span></a>
-                                <a class="dropdown-item" href="math14.html"><span class="sub">STATISTICS</span></a>
-                                <a class="dropdown-item" href="math15.html"><span class="sub">PROBABILITY</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math16.html"><span class="sub">CLASS 10TH- REAL NUMBERS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math17.html"><span class="sub">CLASS 10TH- POLYNOMIALS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math1.html"><span class="sub">CLASS 9TH- NUMBER SYSYTEM</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math2.html"><span class="sub">CLASS 9TH- POLYNOMIALS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math3.html"><span class="sub">CLASS 9TH- COORDINATE GEOMETRY</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math4.html"><span class="sub">CLASS 9TH- LINEAR EQUATIONS IN TWO VARIABLES</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math5.html"><span class="sub">CLASS 9TH- INTRODUCTION TO EUCLIDS GEOMETRY</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math6.html"><span class="sub">CLASS 9TH- LINES AND ANGLES</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math7.html"><span class="sub">CLASS 9TH- TRIANGLES</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math8.html"><span class="sub">CLASS 9TH- QUADRILATERALS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math9.html"><span class="sub">CLASS 9TH- AREAS OF PARALLELOGRAMS AND TRIANGLES</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math10.html"><span class="sub">CLASS 9TH- CIRCLES</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math11.html"><span class="sub">CLASS 9TH- CONSTRUCTIONS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math12.html"><span class="sub">CLASS 9TH- HERON'S FORMULA</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math13.html"><span class="sub">CLASS 9TH- SURFACE AREAS AND VOLUMES</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math14.html"><span class="sub">CLASS 9TH- STATISTICS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math15.html"><span class="sub">CLASS 9TH- PROBABILITY</span></a>
 
 
                             </div>
