--- a/chem5.html
+++ b/chem5.html
@@ -71,7 +71,7 @@
 
 
     <div style="margin-top: 60px;" class="mid">
-        <h1 class="about" style="color: white;font-family: 'Josefin Slab', serif; padding-bottom: 20px;">Chemical Reactions And Equations</h1>
+        <h1 class="about" style="color: white;font-family: 'Josefin Slab', serif; padding-bottom: 20px;">CHEMICAL REACTIONS AND EQUATIONS</h1>
 
         <div class="mid4">
             <div style="background-color: rgb(18,18,18);" class="row">
