--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               </button>
                                 <div class="dropdown-menu">
                                     <a target="_blank" class="dropdown-item" href="bio7.html"><span class="sub">CLASS 10TH- LIFE PROCESSES</span></a>
-                                    <a target="_blank" class="dropdown-item" href="bio8.html"><span class="sub">CLASS 10TH- CONTROL AND COORDINATION</span></a>
+                                    <a target="_blank" class="dropdown-item" href="bio8.html"><span class="sub">CLASS 10TH- HEREDITY AND EVOLUTION</span></a>
                                     <a target="_blank" class="dropdown-item" href="bio1.html"><span class="sub">CLASS 9TH- THE FUNDAMENTAL UNIT OF LIFE</span></a>
                                     <a target="_blank" class="dropdown-item" href="bio2.html"><span class="sub">CLASS 9TH- TISSUES</span></a>
                                     <a target="_blank" class="dropdown-item" href="bio3.html"><span class="sub">CLASS 9TH- DIVERSITY IN LIVING ORGANISMS</span></a>
@@ -141,8 +141,8 @@
             <span class="course" >MATHS</span>
             </button>
                                 <div class="dropdown-menu">
-                                    <a target="_blank" class="dropdown-item" href="math16.html"><span class="sub">CLASS 10TH- REAL NUMBERS</span></a>
-                                    <a target="_blank" class="dropdown-item" href="math17.html"><span class="sub">CLASS 10TH- POLYNOMIALS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math16.html"><span class="sub">CLASS 10TH- LINEAR EQUATIONS IN TWO VARIABLES</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math17.html"><span class="sub">CLASS 10TH- ARITHMETIC PROGRESSION</span></a>
                                     <a target="_blank" class="dropdown-item" href="math1.html"><span class="sub">CLASS 9TH- NUMBER SYSYTEM</span></a>
                                     <a target="_blank" class="dropdown-item" href="math2.html"><span class="sub">CLASS 9TH- POLYNOMIALS</span></a>
                                     <a target="_blank" class="dropdown-item" href="math3.html"><span class="sub">CLASS 9TH- COORDINATE GEOMETRY</span></a>
