--- a/math1.html
+++ b/math1.html
@@ -51,6 +51,8 @@
                 <span class="course" >MATHS</span>
                 </button>
                         <div class="dropdown-menu">
+                            <a class="dropdown-item" href="math16.html"><span class="sub">LINEAR EQUATIONS IN TWO VARIABLES</span></a>
+                            <a class="dropdown-item" href="math17.html"><span class="sub">ARITHMETIC PROGRESSION</span></a>
                             <a class="dropdown-item" href="math1.html"><span class="sub">NUMBER SYSYTEM</span></a>
                             <a class="dropdown-item" href="math2.html"><span class="sub">POLYNOMIALS</span></a>
                             <a class="dropdown-item" href="math3.html"><span class="sub">COORDINATE GEOMETRY</span></a>
