--- a/math17.html
+++ b/math17.html
@@ -5,7 +5,7 @@
             <meta charset="UTF-8">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Polynomials</title>
+            <title>Arithmetic Progression</title>
             <!-- Bootstrap -->
 
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -51,8 +51,8 @@
                     <span class="course" >MATHS</span>
                     </button>
                             <div class="dropdown-menu">
-                                    <a target="_blank" class="dropdown-item" href="math16.html"><span class="sub">CLASS 10TH- REAL NUMBERS</span></a>
-                                    <a target="_blank" class="dropdown-item" href="math17.html"><span class="sub">CLASS 10TH- POLYNOMIALS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math16.html"><span class="sub">CLASS 10TH- LINEAR EQUATIONS IN TWO VARIABLES</span></a>
+                                    <a target="_blank" class="dropdown-item" href="math17.html"><span class="sub">CLASS 10TH- ARITHMETIC PROGRESSION</span></a>
                                     <a target="_blank" class="dropdown-item" href="math1.html"><span class="sub">CLASS 9TH- NUMBER SYSYTEM</span></a>
                                     <a target="_blank" class="dropdown-item" href="math2.html"><span class="sub">CLASS 9TH- POLYNOMIALS</span></a>
                                     <a target="_blank" class="dropdown-item" href="math3.html"><span class="sub">CLASS 9TH- COORDINATE GEOMETRY</span></a>
@@ -83,7 +83,7 @@
 
 
             <div style="margin-top: 60px;" class="mid">
-                <h1 class="about" style="color: white;font-family: 'Josefin Slab', serif; padding-bottom: 20px;">POLYNOMIALS</h1>
+                <h1 class="about" style="color: white;font-family: 'Josefin Slab', serif; padding-bottom: 20px;">ARITHMETIC PROGRESSION</h1>
 
                 <div class="mid4">
                     <div style="background-color: rgb(18,18,18);" class="row">
