--- a/chem5.html
+++ b/chem5.html
@@ -77,11 +77,11 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1Wdtqu9h9A0zDTWE-LjnHA5B9ZpFzhrIs?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">BLACKBOARD NOTES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/123C_sVAAkM-2k6mZyeyVOQh87gHipcqo?usp=share_link"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">BLACKBOARD NOTES</button></a>
                 </div>
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1dElEecVFMLgj2BctKjTy4a4oS4oz7r8b?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=ZN4dpRcAFc8&list=PLFb27aoRQJitj8Ox6Lxox8do8GtN_YQEL"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
                 </div>
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
