--- a/chem6.html
+++ b/chem6.html
@@ -81,7 +81,7 @@
                 </div>
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1dElEecVFMLgj2BctKjTy4a4oS4oz7r8b?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=ZN4dpRcAFc8&list=PLFb27aoRQJitj8Ox6Lxox8do8GtN_YQEL"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
                 </div>
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
