--- a/math16.html
+++ b/math16.html
@@ -88,10 +88,10 @@
                 <div class="mid4">
                     <div style="background-color: rgb(18,18,18);" class="row">
                         <div class="col-lg-3 col-md-3 col-sm-12">
-                            <a target="_blank" href="https://drive.google.com/drive/folders/1vy6OvknJWzJ8VqYOBx18meX27G5wDeQw?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">BLACKBOARD NOTES</button></a>
+                            <a target="_blank" href="https://drive.google.com/drive/folders/1tH-XdcbtACe3gzpnaUY6mJvren-BXbp2?usp=share_link"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">BLACKBOARD NOTES</button></a>
                         </div>
                         <div class="col-lg-3 col-md-3 col-sm-12">
-                            <a target="_blank" href="https://drive.google.com/drive/folders/11Zwl8sTzByorfvdT2GVllwApQcickIy8?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
+                            <a target="_blank" href="https://www.youtube.com/watch?v=ELZpbseAIQk&list=PLFb27aoRQJisCU9lgPiuLIEahEyOLo6L-"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
                         </div>
                         <div class="col-lg-3 col-md-3 col-sm-12">
                             <a target="_blank" href="https://drive.google.com/drive/folders/12nM-M8Ko-cDobtC3AnzYekd1fdoOE-Hq?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">OTHER RESOURCES</button></a>
