--- a/phy6.html
+++ b/phy6.html
@@ -78,11 +78,11 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="blank" href="https://drive.google.com/drive/folders/15I46xLvmOKgmvk5AnWL_s10RfAQIe142?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">BLACKBOARD NOTES</button></a>
+                    <a target="blank" href="https://drive.google.com/drive/folders/1kdUyQZ46oSRACkEl7jC0snhVogChOJmv?usp=share_link"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">BLACKBOARD NOTES</button></a>
                 </div>
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="blank" href="https://drive.google.com/drive/folders/1uSTXwS7vEa2x0FcdKLg8mpun_6vBjDgx?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
+                    <a target="blank" href="https://www.youtube.com/watch?v=2v0Q2TYyBCU&list=PLFb27aoRQJiscxjRumfi-k42HXjbcJx-E"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
                 </div>
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
