--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12">
-                        <a target="_blank" href="class_schedule.html"><button type="button" class="btn btn-outline-danger btn-sm courses">CLASS SCHEDULE</button></a>
+                        <a target="_blank" href="https://drive.google.com/file/d/11byKP7oYpPPdYKzHU6uCGqef3GeHxcRX/view?usp=share_link"><button type="button" class="btn btn-outline-danger btn-sm courses">CLASS SCHEDULE</button></a>
                         <a target="_blank" href="https://rsk.iitk.ac.in/"><button type="button" class="btn btn-outline-warning btn-sm courses">MAIN WEBSITE</button></a>
                     </div>
 
